--- a/src/pages/CurrentResultPage.css
+++ b/src/pages/CurrentResultPage.css
@@ -1,3 +1,4 @@
+
 html, body, #root {
     height: 100%;
     margin: 0;
@@ -6,11 +7,14 @@ html, body, #root {
     font-family: Arial, Helvetica, sans-serif;
   }
   .Results {
+    background-image: url("../../public/xp.png"); 
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(187, 178, 237);
   }
 
 .results-container{
