--- a/src/pages/PreviousResultsPage.css
+++ b/src/pages/PreviousResultsPage.css
@@ -7,8 +7,10 @@ html, body, #root {
   }
   
   .Previous {
-    background-color: rgb(187, 178, 237);
-    text-align: center;
+    background-image: url("../../public/xp.png"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
