--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,6 +8,7 @@ html, body, #root {
 }
 body {
   background-image: url("../../public/xp.png"); 
+  background-size: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -57,17 +58,14 @@ footer {
 }
 
 .LoginCreateButton button{
-  background-color: #e1e1e1;
-  border: 1px solid #7f7f7f;
-    font-family: Tahoma, sans-serif;
-    padding: 6px 12px;
-    font-size: 14px;
-    margin: 5px;
+  background-color: #e0e0e0;
+    border: 2px outset #ffffff;
     color: black;
-    box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
+    font-family: Tahoma, sans-serif;
+    text-align: center;
+    box-shadow: inset -1px -1px #a0a0a0, inset 1px 1px #ffffff;
     cursor: pointer;
-  text-align: center;
-  display: inline-block;
+    transition: all 0.1s ease-in-out;
 }
 
 .PagesButtonsContainter {
@@ -179,27 +177,37 @@ footer {
 }
 
 .PagesButtons button {
-  background-color: #e1e1e1;
-  border: 1px solid #7f7f7f;
-  font-family: Tahoma, sans-serif;
-  padding: 6px 12px;
-  font-size: 14px;
-  margin: 5px;
-  color: black;
-  box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
-  cursor: pointer;
+  background-color: #e0e0e0;
+    border: 2px outset #ffffff;
+    color: black;
+    font-family: Tahoma, sans-serif;
+    font-size: 16px;
+    margin: 15px;
+    width: auto;
+    min-width: 150px;
+    height: auto;
+    min-height: 50px;
+    text-align: center;
+    box-shadow: inset -1px -1px #a0a0a0, inset 1px 1px #ffffff;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
 }
 
 .LoggedButtons button {
-  background-color: #e1e1e1;
-  border: 1px solid #000000;
-  box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
-  color: black;
-
-  width: 30vh;
-  
-  text-align: center;
-  height: 10vh;
+  background-color: #e0e0e0;
+    border: 2px outset #ffffff;
+    color: black;
+    font-family: Tahoma, sans-serif;
+    font-size: 16px;
+    
+    width: auto;
+    min-width: 150px;
+    height: auto;
+    min-height: 50px;
+    text-align: center;
+    box-shadow: inset -1px -1px #a0a0a0, inset 1px 1px #ffffff;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
 }
 
 .AuthorText {
@@ -232,13 +240,17 @@ footer {
   right: 0;
 }
 .Submit-Button{
-background-color: #e1e1e1;
-    border: 1px solid #7f7f7f;
-    font-family: Tahoma, sans-serif;
-    padding: 6px 12px;
-    font-size: 14px;
-    margin: 5px;
-    color: black;
-    box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
-    cursor: pointer;
+  background-color: #e0e0e0;
+  border: 2px outset #ffffff;
+  color: black;
+  font-family: Tahoma, sans-serif;
+  font-size: 16px;
+  margin: 15px;
+  width: auto;  
+  min-width: 150px;
+  height: auto;
+  text-align: center;
+  box-shadow: inset -1px -1px #a0a0a0, inset 1px 1px #ffffff;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
 }
