--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -39,13 +39,14 @@
 }
 
     .LoginButton {
-    color: black;
-    background-color: #e1e1e1;
-    border: 1px solid #7f7f7f;
-    box-shadow: inset 1px 1px white, inset -1px -1px #c0c0c0;
-    text-align: center;
-    display: inline-block;
-    margin: 10px;
+      background-color: #e0e0e0;
+      border: 2px outset #ffffff;
+      color: black;
+      font-family: Tahoma, sans-serif;
+      text-align: center;
+      box-shadow: inset -1px -1px #a0a0a0, inset 1px 1px #ffffff;
+      cursor: pointer;
+      transition: all 0.1s ease-in-out;
     }
 
     .accountButtons {
