--- a/src/pages/DetailedQuestionsPage.css
+++ b/src/pages/DetailedQuestionsPage.css
@@ -57,8 +57,16 @@
         color: black;
         padding-left: 10vh;
         padding-right: 10vh;
+        font-size: 1.5rem;
+        font-weight: bold;
+        
     }
-    
+    .detailed-character-text{
+        color: black;
+        padding-left: 10vh;
+        padding-right: 10vh;
+        font-weight: bold;
+    }
     .Input-Box{
         display: flex;
         flex-direction: column;
@@ -72,3 +80,4 @@
         align-items: center;
         justify-content: center;
     }
+    
