--- a/src/pages/PreviousResultsPage.css
+++ b/src/pages/PreviousResultsPage.css
@@ -35,7 +35,12 @@ html, body, #root {
   }
 
   .Button{
-    background-color: rgb(108, 92, 195);
-    border: 1px solid black; 
-    text-align: center;
+  background-color: #e0e0e0;
+  border: 2px outset #ffffff;
+  color: black;
+  font-family: Tahoma, sans-serif;
+  text-align: center;
+  box-shadow: inset -1px -1px #a0a0a0, inset 1px 1px #ffffff;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
 }
