--- a/public/Result.css
+++ b/public/Result.css
@@ -22,6 +22,22 @@ border-radius: 10px;
 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.salary {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* Aligns items to the top */
+  font-size: 14px;
+  color: rgb(0, 0, 0);
+  /* flex-grow: 1; Allows it to expand and fill space */
+  width: fit-content;
+  margin: auto;
+  border-style: solid;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
 .results-list {
   text-align: center;
   display: flex;
